# PetIBM

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  annotated.html  annotated_dup.js  autogen.sh  classes.html  codemeta.json  configure  configure.ac  dir_000001_000008.html  dir_000001_000009.html  dir_000001_000010.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000008.html  dir_000002_000009.html  dir_000002_000010.html  dir_000003_000004.html  dir_000003_000008.html  dir_000003_000009.html  dir_000003_000010.html  dir_000004_000003.html  dir_000004_000008.html  dir_000004_000009.html  dir_000004_000010.html  dir_000005_000008.html  dir_000005_000009.html  dir_000005_000010.html  dir_000006_000009.html  (+313 more)
applications/: CMakeLists.txt  Makefile.am  Makefile.in
applications/createxdmf/: CMakeLists.txt  Makefile.am  Makefile.in  main.cpp
applications/decoupledibpm/: CMakeLists.txt  Makefile.am  Makefile.in  decoupledibpm.cpp  decoupledibpm.h  main.cpp
applications/ibpm/: CMakeLists.txt  Makefile.am  Makefile.in  ibpm.cpp  ibpm.h  main.cpp
applications/navierstokes/: CMakeLists.txt  Makefile.am  Makefile.in  main.cpp  navierstokes.cpp  navierstokes.h
applications/rigidkinematics/: rigidkinematics.cpp  rigidkinematics.h
applications/tairacolonius/: Makefile.am  Makefile.in  main.cpp  tairacolonius.cpp  tairacolonius.h
applications/vorticity/: CMakeLists.txt  Makefile.am  Makefile.in  main.cpp
applications/writemesh/: CMakeLists.txt  Makefile.am  Makefile.in  main.cpp
examples/: .gitignore  Makefile.am  Makefile.in
examples/api_examples/: README.md
include/: Makefile.am  Makefile.in
include/petibm/: amgxsolver.h  bodypack.h  boundary.h  boundarysimple.h  cartesianmesh.h  delta.h  flowdescription.h  interp.h  io.h  kspsolver.h  lininterp.h  linsolver.h  linsolveramgx.h  linsolverksp.h  mesh.h  misc.h  operators.h  parser.h  probes.h  simulationparameters.h  singlebody.h  singlebodypoints.h  singleboundary.h  singleboundaryconvective.h  singleboundarydirichlet.h  singleboundaryneumann.h  singleboundaryperiodic.h  solution.h  solutions.h  solutionsimple.h  timeintegration.h  type.h  types.h  yaml.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  PetIBM.cpp  main.cpp  petibm-config.cmake.in
src/applications/: Makefile.am  Makefile.in  navierstokes.h
src/body/: Makefile.am  Makefile.in  bodypack.cpp  singlebody.cpp  singlebodypoints.cpp
src/boundary/: Makefile.am  Makefile.in  boundary.cpp  boundarysimple.cpp  singleboundary.cpp  singleboundarybase.cpp  singleboundaryconvective.cpp  singleboundarydirichlet.cpp  singleboundaryneumann.cpp  singleboundaryperiodic.cpp
src/classes/: CartesianMesh.cpp  CartesianMesh.h  SimulationParameters.cpp  SimulationParameters.h
src/include/: BoundaryCondition.h  CartesianMesh.cpp  CartesianMesh.h  FlowDescription.cpp  FlowDescription.h  FractionalStepMethod.cpp  FractionalStepMethod.h  SimulationParameters.cpp  SimulationParameters.h  io.cpp  io.h  makefile  types.h
src/io/: Makefile.am  Makefile.in  io.cpp
src/linSolvers/: AMGXSolver.cpp  AMGXSolver.h  KSPSolver.cpp  KSPSolver.h  LinSolver.cpp  LinSolver.h  Makefile.am  Makefile.in  kspsolver.cpp  solver.h
src/linsolver/: Makefile.am  Makefile.in  linsolver.cpp  linsolveramgx.cpp  linsolverksp.cpp
src/linsolvers/: Makefile.am  Makefile.in  amgxsolver.cpp  kspsolver.cpp  linsolver.cpp
src/mesh/: Makefile.am  Makefile.in  cartesianmesh.cpp  mesh.cpp
src/misc/: Makefile.am  Makefile.in  delta.cpp  interp.cpp  lininterp.cpp  misc.cpp  probes.cpp  type.cpp  types.cpp
src/operator/: Makefile.am  createbn.cpp  creategradient.cpp
src/operators/: Makefile.am  Makefile.in  createBn.cpp  createConvection.cpp  createDelta.cpp  createDiagMatrix.cpp  createDivergence.cpp  createGradient.cpp  createLaplacian.cpp  createR.cpp  createbn.cpp  createconvection.cpp  createdelta.cpp  creatediagmatrix.cpp  createdivergence.cpp  creategradient.cpp  createlaplacian.cpp  operators.h
src/parser/: Makefile.am  Makefile.in  parser.cpp  yaml.cpp
src/private/: private.h
src/solution/: Makefile.am  Makefile.in  solution.cpp  solutions.cpp  solutionsimple.cpp
src/solvers/: Makefile.am  Makefile.in  NavierStokesSolver.cpp  NavierStokesSolver.h  TairaColoniusSolver.cpp  TairaColoniusSolver.h  createSolver.cpp  createSolver.h  makefile
src/timeintegration/: Makefile.am  Makefile.in  timeintegration.cpp
src/utilities/: Body.cpp  Body.h  BodyPack.cpp  BodyPack.h  Boundary.cpp  Boundary.h  BoundaryCondition.h  CartesianMesh.cpp  CartesianMesh.h  FlowDescription.cpp  FlowDescription.h  Makefile.am  Makefile.in  SimulationParameters.cpp  SimulationParameters.h  SingleBody.cpp  SingleBody.h  SingleBoundary.cpp  SingleBoundary.h  Solutions.cpp  Solutions.h  TimeIntegration.cpp  TimeIntegration.h  cartesianmesh.cpp  delta.cpp  delta.h  flowdescription.cpp  misc.cpp  misc.h  parser.cpp  parser.h  simulationparameters.cpp  solutions.cpp  timeintegration.cpp  types.cpp  types.h  yaml.cpp
tests/: CMakeLists.txt  CartesianMeshTest.cpp  Makefile.am  Makefile.in  NavierStokesTest.cpp  TairaColoniusTest.cpp
tests/CartesianMesh/: CartesianMeshTest.cpp  Makefile.am  Makefile.in  StretchedMesh3d.yaml
tests/NavierStokes/: Makefile.am  Makefile.in  NavierStokesTest.cpp
tests/TairaColonius/: Makefile.am  Makefile.in  TairaColoniusTest.cpp  bodies.yaml
tests/body/: CMakeLists.txt  Makefile.am  Makefile.in  body2d.txt  singlebody_test.cpp
tests/boundary/: CMakeLists.txt  Makefile.am  Makefile.in  singleboundary_test.cpp
tests/convectionTerm/: ConvectionTerm.cpp  ConvectionTerm.h  convergence_convective_term.ipynb  main.cpp  makefile
tests/convectiveTerm/: ConvectiveTerm.cpp  ConvectiveTerm.h  Makefile.am  Makefile.in  convectiveTermTest.cpp  makefile  plotGridConvergence.py  runConvectiveTermTest.py
tests/diffusionTerm/: DiffusionTerm.cpp  DiffusionTerm.h  convergence_diffusive_term.ipynb  main.cpp  makefile
tests/diffusiveTerm/: DiffusiveTerm.cpp  (+7 more)
(+1523 files in other folders)
